--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title></title>
 </head>
 <body>
-	<div class ="background"></div>
+	<div class ="background"><img src="adventurebackground.jpg"></div>
 	<div id="buttons">
 		<button value="current">current weather</button>
 		<button value="daily">7-day forecast</button>
