--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 	<div class ="background"><img src="adventurebackground.jpg"></div>
+	<input type="text">
 	<div id="buttons">
 		<button value="current">current weather</button>
 		<button value="daily">7-day forecast</button>
