--- a/styles/index.html
+++ b/styles/index.html
@@ -12,6 +12,7 @@
 		<button value="current">current weather</button>
 		<button value="daily">7-day forecast</button>
 		<button value="hourly">24-hr forecast</button>
+		<img id="loadingGif" src="http://49.media.tumblr.com/tumblr_mayq6qX9Fo1rysqjco1_500.gif">
 
 	</div>
 	<div id="container">
