--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 	</div>
 	<div id="container">
-	
+	<img id="loadingGif" src="http://49.media.tumblr.com/tumblr_mayq6qX9Fo1rysqjco1_500.gif">
 	</div>
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
