--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 </head>
 <body>
 	<div class ="background"><img src="adventurebackground.jpg"></div>
-	<input type="text">
+	<input type="text" placeholder="...search a city">
 	<div id="buttons">
 		<button value="current">current weather</button>
 		<button value="daily">7-day forecast</button>
 		<button value="hourly">24-hr forecast</button>
 
 	</div>
+	<div class="cityContainer"><p>...your current location</p></div>
 	<div id="container">
 	<img id="loadingGif" src="http://49.media.tumblr.com/tumblr_mayq6qX9Fo1rysqjco1_500.gif">
 	</div>
@@ -23,6 +24,6 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.1/backbone-min.js"></script>
 
 	<script src="./js/script.js"></script>
-	<script src="./js/script copy.js"></script>
+	<script src="./js/skycons.js"></script>
 </body>
 </html>
